--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="file_size">0 kB</string>
     <string name="download_percent">0%</string>
     <string name="available_offline">Available Offline</string>
+    <string name="end_of_list">(⁠づ⁠￣⁠ ⁠³⁠￣⁠)⁠づ End of list!</string>
 </resources>
